[package]
name = "torsh-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Backend abstraction layer for ToRSh"
build = "build.rs"

[lints]
workspace = true

[dependencies]
# Core dependencies
torsh-core = { workspace = true }
# SciRS2-Core beta.4 with performance features: parallel operations and SIMD
scirs2-core = { workspace = true, features = ["parallel", "simd"] }

# Utilities
num-traits = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async and concurrency
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }

# Logging and tracing
tracing = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Cryptography and ID generation
uuid = { workspace = true }
sha2 = { workspace = true }

# CPU backend dependencies
# ⚠️ SciRS2 POLICY: rayon is LEGACY - use scirs2-core::parallel_ops for new code
rayon = { workspace = true, optional = true }  # DEPRECATED: Use scirs2-core::parallel_ops
num_cpus = { version = "1.17", optional = true }
# libc = { workspace = true, optional = true }  # REMOVED: Pure Rust (SciRS2 ecosystem)
# ✅ Pure Rust: sysinfo replaces libc for system information
sysinfo = { workspace = true, optional = true }
raw-cpuid = { version = "11.6", optional = true }
# ⚠️ SciRS2 POLICY: wide is LEGACY - use scirs2-core::simd_ops for new code
wide = { version = "1.1", optional = true }  # DEPRECATED: Use scirs2-core::simd_ops
spin = { version = "0.10", optional = true }

# CUDA backend dependencies (feature-gated)
half = { workspace = true, optional = true }

# WebGPU backend dependencies (cross-platform)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
log = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }

# CUDA dependencies only on x86_64 Linux/Windows (CUDA SDK not available on macOS/ARM)
# Following scirs2-core pattern: CUDA requires x86_64 architecture
[target.'cfg(all(target_arch = "x86_64", any(target_os = "linux", target_os = "windows")))'.dependencies]
cust = { workspace = true, optional = true }
cuda-sys = { workspace = true, optional = true }
cudnn-sys = { workspace = true, optional = true }

# Metal backend dependencies (Apple platforms only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true, optional = true }
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
objc2-metal-performance-shaders = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
approx = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.9"

# Temporarily disabled due to API changes requiring updates
# [[bench]]
# name = "backend_benchmarks"
# harness = false

# [[bench]]
# name = "cpu_benchmarks"
# harness = false

[features]
default = ["std", "cpu", "async"]
std = ["torsh-core/std"]
serialize = ["dep:serde", "dep:serde_json", "torsh-core/serialize"]
tracing = ["dep:tracing"]

# Backend features
# ✅ Pure Rust: libc removed, sysinfo added (SciRS2 Pure Rust ecosystem)
cpu = ["dep:rayon", "dep:num_cpus", "dep:sysinfo", "dep:raw-cpuid", "dep:spin", "dep:bytemuck"]
# CUDA feature is platform-conditional - only works on x86_64 Linux and Windows
# Following scirs2-core pattern: cust/cuda-sys dependencies are in target-specific section
cuda = ["dep:cust", "dep:cuda-sys", "dep:half", "serialize", "dep:chrono", "tracing"]
cudnn = ["cuda", "dep:cudnn-sys"]  # cuDNN requires CUDA
metal = ["dep:metal", "dep:objc2", "dep:objc2-metal", "dep:objc2-metal-performance-shaders"]
rocm = []
webgpu = ["dep:wgpu", "dep:bytemuck", "dep:log", "dep:md5"]
async = ["dep:tokio"]

# CPU optimization features
# ⚠️ SciRS2 POLICY: Prefer scirs2-parallel over rayon-threads for new code
rayon-threads = ["dep:rayon"]  # LEGACY: Use scirs2-parallel instead
simd = ["dep:wide"]  # LEGACY: Use scirs2-simd instead

# SciRS2 Performance Features (Phase 1-4 Integration)
scirs2-parallel = []  # Phase 1: Parallel operations (2-4x speedup)
scirs2-simd = []      # Phase 3: Memory-aligned SIMD (2-4x speedup)
scirs2-gpu = []       # Phase 2: GPU kernel integration (10-100x speedup)
scirs2-chunking = []  # Phase 4: Intelligent chunking (15-30% improvement)
