[package]
name = "torsh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tools for the ToRSh deep learning framework"
keywords = ["machine-learning", "deep-learning", "neural-networks", "cli", "tools"]
categories = ["command-line-utilities", "science"]

[lints]
workspace = true

[[bin]]
name = "torsh"
path = "src/main.rs"

[dependencies]
# Core ToRSh dependency - meta-crate with all features
torsh = { workspace = true, features = ["nn", "optim", "data", "vision", "text", "quantization", "jit", "profiler", "hub"] }

# SciRS2 ecosystem dependencies (following SCIRS2 POLICY)
# Must use SciRS2 as foundation instead of rand/ndarray
# ✅ UNIFIED ACCESS: Use scirs2-core 0.1.0-RC.1+ for complete ndarray/random functionality
scirs2-core = { workspace = true, features = ["simd", "parallel"] }
scirs2-linalg = { workspace = true, optional = true }
scirs2-metrics = { workspace = true, optional = true }

# CLI framework
clap = { version = "4.5.55", features = ["derive", "env", "color"] }
clap_complete = "4.5"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.9"

# File handling
walkdir = "2.5"
glob = "0.3"

# Progress and UI
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"
colored = "3.1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
humantime = "2.3"
byte-unit = "5.2"
uuid = { workspace = true }
fastrand = "2.3"

# Networking for model downloads
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = { workspace = true }

# System info - Pure Rust (libc removed for SciRS2 Pure Rust ecosystem)
sysinfo = { workspace = true }

# Directory utilities
dirs = "6.0"

[features]
default = ["nn", "optim", "data", "vision", "text", "quantization", "jit", "hub", "profiler", "linalg", "metrics"]

# Core features (from torsh dependency)
nn = []
optim = []
data = []
vision = []
text = []

# Advanced features
quantization = []
jit = []
hub = []
profiler = []
linalg = ["dep:scirs2-linalg"]
metrics = ["dep:scirs2-metrics"]

# Development features
dev = []

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.1"
predicates = "3.1"
