[package]
name = "torsh-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Data loading and preprocessing utilities for ToRSh"

[dependencies]
# Core dependencies
torsh-core = { path = "../torsh-core" }
torsh-tensor = { path = "../torsh-tensor" }

# Leverage scirs2's data utilities
scirs2 = { workspace = true, features = ["datasets"] }

# Data processing
polars = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

# Image processing
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }

# Parallel processing
rayon = { workspace = true }
crossbeam = { workspace = true }

# File I/O
csv = { version = "1.3", optional = true }
hdf5 = { version = "0.8", optional = true }
parquet = { version = "48.0", optional = true }

# Utilities
rand = "0.8"
indexmap = { workspace = true }
parking_lot = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std", "image-support"]
std = ["torsh-core/std", "torsh-tensor/std"]
image-support = ["image", "imageproc"]
audio-support = []
dataframe = ["polars", "csv"]
hdf5-support = ["hdf5"]
parquet-support = ["parquet"]
serialize = ["serde", "torsh-core/serialize"]
full = ["image-support", "audio-support", "dataframe", "hdf5-support", "parquet-support", "serialize"]